# MADiR

./: .gitignore  pyproject.toml
madir/: app.py
mav/: app.py
tests/: test_app.py
